# capstone1_ROS_gazebo

./: .gitignore  README.md
src/: .rosinstall  .rosinstall.bak
src/ball_detection/: CMakeLists.txt
src/ball_detection/src/: ball_detect.cpp
src/core_msgs/: CMakeLists.txt  package.xml
src/core_msgs/msg/: ball_position.msg  markermsg.msg  multiarray.msg
src/data_integrate/: CMakeLists.txt  package.xml
src/data_integrate/launch/: start_kaibot_with_xbox.launch  start_kaibot_without_xbox.launch  start_remoteCom.launch
src/data_integrate/src/: data_integration.cpp  data_show.cpp
src/junny_control/: CMakeLists.txt  package.xml
src/junny_control/config/: junny_control (copy).yaml  junny_control.yaml  junny_control_one_actuator.yaml  junny_control_with_actuator.yaml
src/junny_control/launch/: junny_control (copy).launch  junny_control _one_actuator.launch  junny_control.launch  junny_control_with_actuator.launch  junny_control_without_actuator.launch
src/map_generate/: package.xml
src/map_generate/launch/: import_world.launch
src/map_generate/worlds/: kaist_logo.stl  map_final.stl  map_final.world  map_final_ball.world  map_final_goalline.stl  map_final_goalline_black.stl  map_final_onlyline.stl
src/map_generate/worlds/temp/: map_final_3_jh.world
src/turtlebot3_description/launch/: spawn_turtlebot3.launch
src/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
src/turtlebot3_description/urdf/temp/with_actuator/: turtlebot3_waffle.urdf.xacro
src/turtlebot3_description/urdf/temp/without_actuator/: turtlebot3_waffle.urdf.xacro
src/turtlebot3_gazebo/: CMakeLists.txt
src/turtlebot3_gazebo/launch/: test.launch  turtlebot3_empty_world.launch
src/turtlebot3_gazebo/worlds/: map_final_3.stl  map_final_3_goalline.stl  map_final_3_jh.world
src/turtlebot3_teleop/nodes/: turtlebot3_teleop_key
